applications/custom-operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app
  namespace: custom-operator
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - hello.diogomota.com
      secretName: hello-app-tls
  rules:
    - host: hello.diogomota.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-app
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  namespace: custom-operator
spec:
  selector:
    app: hello-app
    app.kubernetes.io/managed-by: custom-operator
  ports:
    - name: http
      port: 80
      targetPort: 8080
